--- a/Projetos/THE landpage/pageMain.css
+++ b/Projetos/THE landpage/pageMain.css
@@ -2,6 +2,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    position: relative;
+    min-height: 100vh;
+}
+
 .light {
     background: url('https://images.pexels.com/photos/957024/forest-trees-perspective-bright-957024.jpeg?cs=srgb&dl=pexels-felix-mittermeier-957024.jpg&fm=jpg');
     background-size: cover;
@@ -141,6 +146,10 @@ h2 {
     opacity: 100%;
 }
 
+.submit {
+    cursor: pointer;
+}
+
 a {
 
     text-decoration: none;
@@ -178,15 +187,15 @@ a:hover {
     font-weight: 500;
 }
 
-.signup {
+.account-back {
     display: block;
     text-align: left;
     margin-top: 20px;
     color: var(--second-color);
 }
 
-.signup,
-.signup a {
+.account-back,
+.account-back a {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
 }
@@ -211,12 +220,12 @@ a:hover {
     color: #fff;
 }
 
-#privacyBody {
-    justify-content: center;
-}
-
 #privacyContainer {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
     width: 800px;
+
 }
 
 #privacyBox {
@@ -233,5 +242,15 @@ a:hover {
     padding: 10px 50px;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
+}
+
+.go-back {
+    position: relative;
+    top: 0;
+    right: 0;
+    text-align: right;
+    margin: 0 0 0 9rem;
+    padding: 0.5rem;
+    color: var(--second-color);
 }
 
